--- a/k8s/01-quizmaster-pro.yaml
+++ b/k8s/01-quizmaster-pro.yaml
@@ -89,7 +89,7 @@ spec:
       initContainers:
         - name: init-dirs
           image: busybox:1.36
-          command: ['sh', '-c', 'mkdir -p /app/quizzes /app/results /app/uploads && chmod 755 /app/quizzes /app/results /app/uploads']
+          command: ['sh', '-c', 'mkdir -p /app/quizzes /app/results /app/uploads && chown -R 1001:1001 /app/quizzes /app/results /app/uploads && chmod -R 755 /app/quizzes /app/results /app/uploads']
           volumeMounts:
             - name: quizzes
               mountPath: /app/quizzes
