Fix: Update image to sapetor/quizmaster-pro:latest

--- a/k8s/01-quizmaster-pro.yaml
+++ b/k8s/01-quizmaster-pro.yaml
@@ -101,8 +101,8 @@ spec:
       containers:
         - name: quizmaster-pro
           # TODO: Replace with your actual image
-          image: your-registry/quizmaster-pro:latest
-          imagePullPolicy: IfNotPresent
+          image: sapetor/quizmaster-pro:latest
+          imagePullPolicy: Always
 
           envFrom:
             - configMapRef:
