fix: Cache busting for K8s deployments

--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "dev": "nodemon server.js",
     "build:css": "postcss public/css/main.css -o public/css/main.bundle.css --verbose",
     "build:css:watch": "postcss public/css/main.css -o public/css/main.bundle.css --watch --verbose",
+    "cache-bust": "node scripts/cache-bust.js",
     "build": "npm run build:css",
-    "build:prod": "npm run build:css && echo 'CSS bundled for production'",
+    "build:prod": "npm run build:css && npm run cache-bust",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "format": "prettier --write \"**/*.{js,json,css,md}\"",
