--- a/k8s/02-quizmaster-ingress.yaml
+++ b/k8s/02-quizmaster-ingress.yaml
@@ -21,6 +21,8 @@ metadata:
     nginx.ingress.kubernetes.io/use-regex: "true"
     # Rewrite /quizmaster/xyz to /xyz preserving the path
     nginx.ingress.kubernetes.io/rewrite-target: /$2
+    # Disable NGINX proxy buffering to ensure fresh content delivery
+    nginx.ingress.kubernetes.io/proxy-buffering: "off"
 spec:
   ingressClassName: nginx
   rules:
